mysql-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-catalog-deployment
  namespace: library-ns
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-catalog
  template:
    metadata:
      labels:
        app: mysql-catalog
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.27
        ports:
        - containerPort: 3306
      volumes:
      - name: mysql-initdb
        configMap:
          name: mysql-catalog-initdb-config
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-catalog-service
  namespace: library-ns
spec:
  type: ClusterIP
  selector:
    app: mysql-catalog
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
# microk8s kubectl port-forward -n library-ns service/mysql-catalog-service 13306:3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-catalog-ext-service
  namespace: library-ns
spec:
  type: NodePort
  selector:
    app: mysql-catalog
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
